cart and adding items to cart

--- a/mycoffee/templates/coffee_detail.html
+++ b/mycoffee/templates/coffee_detail.html
@@ -19,6 +19,13 @@
                 <p>Powders Added: {% for powder in coffee.powders.all %} {{powder.name}}{% endfor %}</p>
             {% endif %}
             <p>{{coffee.price}} KWD</p>
+            <p>
+                <form action="{% url 'cart:mycart' %}" method="GET">
+                  <input type="hidden" name="item" value="{{coffee.id}}"/>
+                  <input type="number" class="item-qty" name="qty" value="1"/>
+                  <input type="submit" class="btn btn-success" value="Add to Cart"/>
+                </form>
+            </p>
         </div>
     </div>
 </div>
