--- a/mycoffee/templates/coffee_list.html
+++ b/mycoffee/templates/coffee_list.html
@@ -9,6 +9,13 @@
                     <h3>{{coffee.name}}</h3>
                     <p>{{coffee.price}}</p>
                     <p><a href="{% url 'mycoffee:coffee_detail' coffee_id=coffee.id %}" class="btn btn-primary" role="button">More Details</a>
+                    <p>
+                        <form action="{% url 'cart:mycart' %}" method="GET">
+                          <input type="hidden" name="item" value="{{coffee.id}}"/>
+                          <input type="hidden" class="item-qty" name="qty" value="1"/>
+                          <input type="submit" class="btn btn-success" value="Add to Cart"/>
+                        </form>
+                    </p>
                 </div>
             </div>
         </div>
