--- a/mycoffee/templates/base.html
+++ b/mycoffee/templates/base.html
@@ -17,9 +17,9 @@
 
 <body>
 	<div class="container">
-	{% block title %}
+	{% block content %}
 		
-    {% endblock title %}
+    {% endblock content %}
 </div>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
